<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/rmb_hint_label"
        android:inputType="numberDecimal"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/show"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_width="match_parent"
        android:text="@string/app_name"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/dollar"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dollar_label"/>
    <Button
        android:id="@+id/euro"
        android:text="@string/btn_euro_label"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/won"
        android:onClick="onClick"
        android:text="@string/btn_won_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_opencfg"
        android:text="@string/btn_opencfg_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="openOne" />
</LinearLayout>